# lanbaoshen.github.io

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: pages-build-deployment.yml
ai/running-local-model-with-ollama/: index.html
automated/accessibility-conflict/: index.html
automated/appium-error/: index.html
automated/remote-control-of-android-devices/: index.html
blog/: index.html
blog/2024/02/25/circular-import/: index.html
blog/archive/2024/: index.html
blog/archive/2025/: index.html
blog/category/ai/: index.html
blog/category/automated/: index.html
blog/category/efficiency/: index.html
blog/category/python/: index.html
blog/page/2/: index.html
docs/: .meta.yml
docs/blog/: .authors.yml
docs/blog/posts/: accessibility-conflict.md  bfs-and-dfs-in-dict-traversal.md  capturing-grep-real-time-output.md  circular-import.md  enhance-zsh.md  my-ai-product-1.md  my-ai-product-2.md  my-ai-product-3.md  my-ai-product-4.md  remote-control-of-android-devices.md  running-local-model-with-ollama.md  source-code-batch-changes.md  stop-or-kill-a-thread.md
includes/: abbreviations.md
other/enhance-zsh/: index.html
overrides/: main.html
overrides/partials/: comments.html
python/bfs-and-dfs-in-dict-traversal/: index.html
python/capturing-grep-real-time-output/: index.html
python/capturing_grep_real_time_output/: index.html
python/circular-import/: index.html
python/source-code-batch-changes/: index.html
python/stop-or-kill-a-thread/: index.html
repo/: index.html
search/: search_index.json
(+12 files in other folders)
