[project]
name = "lanbaoshen-github-io"
version = "0.1.0"
description = "Lanbao's blog, based on MkDocs and Material theme"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-redirects>=1.2.2",
    "pymdown-extensions>=10.15",
    "termynal>=0.13.0",
]
